# x64emulator

./: .gitmodules  CMakeLists.txt  README.md
emulator/: .clang-tidy  CMakeLists.txt
emulator/include/: bitflags.h  bitmask.h  intervalvector.h  optional.h  scopeguard.h  signalhandler.h  smallmap.h  smallvector.h  span.h  utils.h  verify.h
emulator/include/disassembler/: capstonewrapper.h
emulator/include/elf-reader/: elf-reader.h  elf.h  elf32.h  elf64.h  enums.h
emulator/include/emulator/: disassemblycache.h  emulator.h  executablememoryallocator.h  interpreter.h  profilingdata.h  symbolprovider.h  vm.h  vmthread.h
emulator/include/fs/: epoll.h  fs.h  hostfile.h  shadowfile.h  socket.h  stream.h
emulator/include/host/: host.h  hostinstructions.h  hostmemory.h
emulator/include/instructions/: allinstructions.h  x64instruction.h
emulator/include/interpreter/: auxiliaryvector.h  checkedcpuimpl.h  cpu.h  interpreter.h  kernel.h  mmu.h  registers.h  simd.h  syscalls.h  verify.h  vm.h
emulator/include/kernel/: auxiliaryvector.h  host.h  kernel.h  scheduler.h  syscalls.h  thread.h  threadbase.h  threadblocker.h  timers.h
emulator/include/kernel/dev/: device.h  hostdevice.h  tty.h  (+2 more)
emulator/include/pe-reader/: pe-enums.h  pe-reader.h  pe.h
emulator/include/utils/: buffer.h  erroror.h
emulator/include/x64/: checkedcpuimpl.h  codesegment.h  cpu.h  cpuimpl.h  flags.h  mmu.h  nativecpuimpl.h  registers.h  simd.h  spinlock.h  tostring.h  types.h  x87.h
emulator/src/: main.cpp  utils.cpp
emulator/src/elf-reader/: main.cpp
emulator/src/emulator/: disassemblycache.cpp  emulator.cpp  executablememoryallocator.cpp  interpreter.cpp  profilingdata.cpp  symbolprovider.cpp  vm.cpp  vmthread.cpp
emulator/src/fs/: epoll.cpp  event.cpp  hostfile.cpp  socket.cpp
emulator/src/host/: host.cpp  hostinstructions.cpp  hostmemory.cpp
emulator/src/interpreter/: cpu.cpp  kernel.cpp  mmu.cpp  registers.cpp  simd.cpp  symbolprovider.cpp  syscalls.cpp  thread.cpp  vm.cpp
emulator/src/kernel/: auxiliaryvector.cpp  host.cpp  kernel.cpp  scheduler.cpp  syscalls.cpp  thread.cpp  threadbase.cpp  threadblocker.cpp  timers.cpp
emulator/src/pe-reader/: main.cpp  pe-exec.cpp
emulator/src/x64/: checkedcpuimpl.cpp  codesegment.cpp  cpu.cpp  cpuimpl.cpp  flags.cpp  mmu.cpp  nativecpuimpl.cpp  registers.cpp  simd.cpp  types.cpp  x87.cpp
profileviewer/: CMakeLists.txt
profileviewer/include/: focusedprofiledata.h  profiledata.h  range.h
profileviewer/src/: focusedprofiledata.cpp  main.cpp  profiledata.cpp
profiling/: CMakeLists.txt
profiling/include/: profilingdata.h  utils.h
profiling/src/: profilingdata.cpp
tests/compiler/: CMakeLists.txt
tests/compiler/src/: test_add.cpp  test_and.cpp  test_bsr.cpp  test_bt.cpp  test_cmov.cpp  test_cmpps.cpp  test_imul.cpp  test_lea.cpp  test_mmx_unordered_map.cpp  test_mov.cpp  test_movd.cpp  test_movdqu.cpp  test_movss.cpp  test_movsx.cpp  test_mul.cpp  test_or.cpp  test_pextrd.cpp  test_pinsrd.cpp  test_pinsrw.cpp  test_pmovmskb.cpp  test_pmuludq.cpp  test_pop.cpp  test_pshufb.cpp  test_pshufd.cpp  test_pslld.cpp  test_psrld.cpp  test_readfs.cpp  test_repmovs.cpp  test_repstos.cpp  test_ret.cpp  test_roundps.cpp  test_scenario_01.cpp  test_scenario_02.cpp  test_scenario_03.cpp  test_scenario_04.cpp  test_scenario_05.cpp  test_scenario_06.cpp  test_scenario_07.cpp  test_scenario_08.cpp  test_scenario_09.cpp  (+6 more)
tests/cpu/: CMakeLists.txt
tests/cpu/include/: cputestutils.h
tests/cpu/src/: test_adc.cpp  test_add.cpp  test_cmpxchg16b.cpp  test_crc32.cpp  test_cvtps2dq.cpp  test_cvtsi2sd32.cpp  test_cvtsi2ss32.cpp  test_frndint.cpp  test_imul.cpp  test_insertps.cpp  test_minpd.cpp  test_movss.cpp  test_mul.cpp  test_pabs.cpp  test_palignr.cpp  test_pblendw.cpp  test_pcmpeqb.cpp  test_pcmpistri.cpp  test_pmaddubsw.cpp  test_pmulhw.cpp  test_pshufb.cpp  test_pshufd.cpp  test_psign.cpp  test_pslldq.cpp  test_psrldq.cpp  test_punpck.cpp  test_push.cpp  test_rcl.cpp  test_rcr.cpp  test_rol.cpp  test_ror.cpp  test_roundss.cpp  test_sbb.cpp  test_shifts.cpp  test_shl.cpp  test_shr.cpp  test_sse_strcmp.cpp  test_sub.cpp  test_tzcnt.cpp  test_unpcklps.cpp  (+1 more)
tests/emulator/: CMakeLists.txt
tests/emulator/data/: networkx.py  trivial.py
tests/emulator/src/: test_abort.cpp  test_ack.cpp  test_add.cpp  test_avcodec.cpp  test_big_memcpy.cpp  test_brk.cpp  test_deadlock.cpp  test_devnull.cpp  test_devttywrite.cpp  test_dlopen.cpp  test_exceptions.cpp  test_exec.cpp  test_fact.cpp  test_failexec.cpp  test_fibonacci.cpp  test_fmt_print.cpp  test_fork.cpp  test_fork_twice.cpp  test_forkpipe.cpp  test_getfd.cpp  test_getpgid.cpp  test_global.cpp  test_hammer_atomic.cpp  test_hammer_lock.cpp  test_ioctl.cpp  test_jit.cpp  test_lock.cpp  test_longjmp.cpp  test_loop.cpp  test_loop_call.cpp  test_loop_indirectcall.cpp  test_loop_indirectcall2.cpp  test_loop_switch.cpp  test_lseek.cpp  test_many_events.cpp  test_many_pipes.cpp  test_memfd.cpp  test_memfd_munmap.cpp  test_memmove.cpp  test_mmap2.cpp  (+31 more)
tests/fs/: CMakeLists.txt
tests/fs/src/: test_procfs.cpp  test_rename.cpp  test_setfl.cpp
tests/interpreter/: CMakeLists.txt
tests/interpreter/src/: comparisons.cpp  malloc.cpp  print.cpp  staticcollection.cpp  staticconstructor.cpp  test_argc.cpp  test_atomic.cpp  test_big_malloc.cpp  test_call0.cpp  test_call1.cpp  test_fenv.cpp  test_fmt_print.cpp  test_fpu.cpp  test_lock.cpp  test_loop.cpp  test_malloc.cpp  test_memmove.cpp  test_nontrivialstatic.cpp  test_openfile.cpp  test_ostream.cpp  test_programargs.cpp  test_readfile.cpp  test_staticcollection.cpp  test_staticconstructor.cpp  test_staticinitialization.cpp  test_stringstream.cpp  test_thread.cpp  test_thread_scaling.cpp  test_threadlocal.cpp  test_threadlocal2.cpp  test_trivial.c  test_virtual.cpp
tests/optimizer/: CMakeLists.txt
tests/optimizer/src/: test_dead_write.cpp
tests/softfloat/: CMakeLists.txt
tests/softfloat/src/: softfloat_add.cpp
tests/unit/: CMakeLists.txt
tests/unit/src/: test_capstone_lea.cpp  test_flaglesschoose.cpp  test_ioctl_probe.cpp  test_mmu.cpp  test_strlen_sse2.cpp
(+282 files in other folders)
