cmake_minimum_required(VERSION 3.13)
project(x64)
set(CMAKE_CXX_STANDARD 17)

set(CC_OPTIONS -g -O0 -DDEBUG -fpic)
set(LD_OPTIONS)

add_executable(test_compiler_mov src/test_mov.cpp)
target_compile_options(test_compiler_mov PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_mov PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_mov PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_mov PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_mov COMMAND test_compiler_mov)

add_executable(test_compiler_test src/test_test.cpp)
target_compile_options(test_compiler_test PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_test PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_test PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_test PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_test COMMAND test_compiler_test)

add_executable(test_compiler_and src/test_and.cpp)
target_compile_options(test_compiler_and PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_and PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_and PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_and PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_and COMMAND test_compiler_and)

add_executable(test_compiler_lea src/test_lea.cpp)
target_compile_options(test_compiler_lea PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_lea PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_lea PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_lea PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_lea COMMAND test_compiler_lea)

add_executable(test_compiler_or src/test_or.cpp)
target_compile_options(test_compiler_or PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_or PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_or PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_or PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_or COMMAND test_compiler_or)

add_executable(test_compiler_xor src/test_xor.cpp)
target_compile_options(test_compiler_xor PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_xor PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_xor PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_xor PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_xor COMMAND test_compiler_xor)

add_executable(test_compiler_add src/test_add.cpp)
target_compile_options(test_compiler_add PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_add PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_add PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_add PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_add COMMAND test_compiler_add)

add_executable(test_compiler_sub src/test_sub.cpp)
target_compile_options(test_compiler_sub PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_sub PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_sub PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_sub PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_sub COMMAND test_compiler_sub)

add_executable(test_compiler_shl src/test_shl.cpp)
target_compile_options(test_compiler_shl PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_shl PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_shl PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_shl PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_shl COMMAND test_compiler_shl)

add_executable(test_compiler_shr src/test_shr.cpp)
target_compile_options(test_compiler_shr PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_shr PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_shr PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_shr PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_shr COMMAND test_compiler_shr)

add_executable(test_compiler_scenario_01 src/test_scenario_01.cpp)
target_compile_options(test_compiler_scenario_01 PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_scenario_01 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_scenario_01 PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_scenario_01 PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_scenario_01 COMMAND test_compiler_scenario_01)

add_executable(test_compiler_scenario_02 src/test_scenario_02.cpp)
target_compile_options(test_compiler_scenario_02 PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_scenario_02 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_scenario_02 PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_scenario_02 PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_scenario_02 COMMAND test_compiler_scenario_02)

add_executable(test_compiler_movsx src/test_movsx.cpp)
target_compile_options(test_compiler_movsx PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_movsx PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_movsx PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_movsx PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_movsx COMMAND test_compiler_movsx)